# scriptura-lab

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.github/: FUNDING.yml
.github/workflows/: greetings.yml
apps/api/: README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: config.py
apps/api/app/routes/: chat.py  health.py  sources.py
apps/api/app/schemas/: chat.py  source.py
apps/api/app/services/embeddings/: ollama_embeddings.py
apps/api/app/services/ingestion/: chunker.py  ingest_service.py  markdown_loader.py
apps/api/app/services/llm/: ollama_client.py
apps/api/app/services/models/: __init__.py  base.py  factory.py  openai_adapters.py
apps/api/app/services/rag/: answer_service.py  prompt_builder.py  retriever.py
apps/api/app/services/vector/: qdrant_store.py
apps/api/tests/: test_health.py  test_markdown_loader.py  test_model_factory.py  test_open_sources.py  test_openai_adapters.py  test_prompt_builder.py  test_qdrant_store.py
apps/web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
data/custom/: README.md
data/open/: README.md
data/open/sources/: kjv-ephesians-2-1-10.md  kjv-genesis-1-1-5.md  kjv-john-1-1-5.md  kjv-romans-8-18-25.md  open-source-catalog.md  oshb-genesis-1-1-3.md  sblgnt-john-1-1-5.md
data/sample/sources/: ephesians-2.md  (+4 more)
docs/: architecture.md  data-policy.md  local-setup.md  model-providers.md  rag-pipeline.md  web-ui.md
scripts/ingest/: ingest_sample_data.py
(+7 files in other folders)
